[package]
name = "tokio-cache"
version = "0.2.0-alpha.0"
authors = ["Simon Génier <1782845+animalsiknow@users.noreply.github.com>"]
edition = "2018"
documentation = "https://docs.rs/crate/tokio-cache"
repository = "https://github.com/animalsiknow/tokio-cache"
description = "Non-blocking caches that can be used with Tokio."
readme = "README.md"
categories = ["asynchronous", "caching"]
license = "MPL-2.0"

[dependencies.arc-swap]
version = "0.4"

[dependencies.im]
version = "13.0"

[dependencies.tokio-sync]
version = "0.2.0-alpha.4"

[dev-dependencies.tokio]
version = "0.2.0-alpha.4"
